--- a/site/index.html
+++ b/site/index.html
@@ -1,3 +1,9 @@
 <html>
-    
-</html>
+    <head>
+        <title>Hello Coursera</title>
+    </head>
+
+    <body>
+        <p>hashduas</p>
+    </body>
+</html> 
